// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings fetchSettings can't fetch settings 1`] = `
Array [
  Object {
    "type": "SETTINGS_GET_NEXT",
  },
  Object {
    "payload": "api had some issue",
    "type": "SETTINGS_GET_ERROR",
  },
]
`;

exports[`settings fetchSettings fetches settings 1`] = `
Array [
  Object {
    "type": "SETTINGS_GET_NEXT",
  },
  Object {
    "type": "SETTINGS_GET_COMPLETE",
  },
]
`;

exports[`settings reducer loads settings 1`] = `
Object {
  "androidSettings": Object {
    "artifactExposingWorkflows": "All",
    "selectedKeystoreFile": Object {
      "name": "abcdefghijkl1234567",
    },
    "selectedServiceAccountJsonFile": Object {
      "name": "abcdefghijkl12345671566",
    },
    "track": "Release",
  },
  "certificates": Array [
    Object {
      "name": "iPhone Developer: John Doe (ABCD1234)",
    },
    Object {
      "name": "iPhone Developer: John Doe (ABCD5678)",
    },
  ],
  "iosSettings": Object {
    "appSku": "Fill",
    "appSpecificPassword": "Fill",
    "appleDeveloperAccountEmail": "Fill",
    "artifactExposingWorkflows": "All",
    "selectedCertificate": Object {
      "name": "iPhone Developer: John Doe (ABCD5678)",
    },
    "selectedProvProfile": Object {
      "name": "abcdefghijkl1234567",
    },
  },
  "keystoreFiles": Array [
    Object {
      "name": "abcdefghijkl1234567",
    },
    Object {
      "name": "abcdefghijkl12345671566",
    },
  ],
  "provProfiles": Array [
    Object {
      "name": "abcdefghijkl1234567",
    },
    Object {
      "name": "abcdefghijkl12345671566",
    },
  ],
  "serviceAccountJsonFiles": Array [
    Object {
      "name": "abcdefghijkl1234567",
    },
    Object {
      "name": "abcdefghijkl12345671566",
    },
  ],
}
`;

exports[`settings updateSettings can't update settings 1`] = `
Array [
  Object {
    "type": "SETTINGS_UPDATE_NEXT",
  },
  Object {
    "payload": "api had some issue",
    "type": "SETTINGS_GET_ERROR",
  },
]
`;

exports[`settings updateSettings updates settings 1`] = `
Array [
  Object {
    "type": "SETTINGS_UPDATE_NEXT",
  },
  Object {
    "payload": Object {
      "androidSettings": Object {
        "artifactExposingWorkflows": "All",
        "selectedKeystoreFile": Object {
          "name": "abcdefghijkl1234567",
        },
        "selectedServiceAccountJsonFile": Object {
          "name": "abcdefghijkl12345671566",
        },
        "track": "Release",
      },
      "certificates": Array [
        Object {
          "name": "iPhone Developer: John Doe (ABCD1234)",
        },
        Object {
          "name": "iPhone Developer: John Doe (ABCD5678)",
        },
      ],
      "iosSettings": Object {
        "appSku": "Fill",
        "appSpecificPassword": "Fill",
        "appleDeveloperAccountEmail": "Fill",
        "artifactExposingWorkflows": "Primary",
        "selectedCertificate": Object {
          "name": "iPhone Developer: John Doe (ABCD5678)",
        },
        "selectedProvProfile": Object {
          "name": "abcdefghijkl1234567",
        },
      },
      "keystoreFiles": Array [
        Object {
          "name": "abcdefghijkl1234567",
        },
        Object {
          "name": "abcdefghijkl12345671566",
        },
      ],
      "provProfiles": Array [
        Object {
          "name": "abcdefghijkl1234567",
        },
        Object {
          "name": "abcdefghijkl12345671566",
        },
      ],
      "serviceAccountJsonFiles": Array [
        Object {
          "name": "abcdefghijkl1234567",
        },
        Object {
          "name": "abcdefghijkl12345671566",
        },
      ],
    },
    "type": "SETTINGS_UPDATE_COMPLETE",
  },
]
`;
